# OSY

./: .gitignore
Homeworks/HW01/: hw01.01.sh  hw01.sh  input.txt  tmp
Homeworks/HW01/thw/: text.txt
Homeworks/HW02/: hw02.sh  input01.txt  inputC.txt  test.sh
Homeworks/HW03/: CMakeLists.txt  Makefile  forkpipe.c  forkpipe.h  gen.c  gen.h  main  nsd_p.c  nsd_p.h  parent.c  parent.h  util.c  util.h
Homeworks/HW03_02/: .gitignore  CMakeLists.txt  forkpipe.c  forkpipe.h  gen.h  nsd_p.c  util.c  util.h
Homeworks/HW04/tryNo1/: LinkedList.c  LinkedList.h  LinkedListQueue.c  LinkedListQueue.h  Makefile  checkedMemory.c  input.txt  mem.c  prod_cons.c  prod_cons.h  utils.c  utils.h
Homeworks/HW04/tryNo2/: CMakeLists.txt  LinkedList.c  LinkedList.h  LinkedListQueue.c  LinkedListQueue.h  Makefile  input.txt  mem.h  prod-cons  prod-cons.c  prod-cons.h  utils_2.c  utils_2.h
Homeworks/HW04_CPP/: CMakeLists.txt  prod-cons.cpp  prod-cons.h  utils.cpp  utils.h
Labs/Lab01/: grep
Labs/Lab03/: skript.sh
